Move arch tests into standard matrix
